# loglog

./: Cargo.toml  log.sh
src/: aws.rs  log_group.rs  log_groups.rs  log_viewer.rs  main.rs  shared.rs  table.rs
